crates/mokoto/tests/snapshots/types__parse_types@Func.mo-10.snap
---
source: crates/mokoto/tests/types.rs
expression: output
---
shared query <K <: Int, V> (a : A) -> (b : B, (c : C, d : D))

---
FUNC_TYPE@0..61
  FUNC_ARG@0..35
    FUNC_SORT@0..13
      SHARED_KW@0..6 "shared"
      SPACE@6..7 " "
      QUERY_KW@7..12 "query"
      SPACE@12..13 " "
    TYPE_PARAMS@13..27
      L_ANGLE@13..14 "<"
      TYPE_BIND@14..22
        IDENT@14..15 "K"
        SPACE@15..16 " "
        SUB@16..18 "<:"
        SPACE@18..19 " "
        PATH_TYPE@19..22
          PATH@19..22
            IDENT@19..22 "Int"
      COMMA@22..23 ","
      SPACE@23..24 " "
      TYPE_BIND@24..25
        IDENT@24..25 "V"
      R_ANGLE@25..26 ">"
      SPACE@26..27 " "
    PAREN_TYPE@27..35
      L_PAREN@27..28 "("
      NAMED_TYPE@28..33
        NAME@28..30
          IDENT@28..29 "a"
          SPACE@29..30 " "
        COLON@30..31 ":"
        SPACE@31..32 " "
        PATH_TYPE@32..33
          PATH@32..33
            IDENT@32..33 "A"
      R_PAREN@33..34 ")"
      SPACE@34..35 " "
  ARROW@35..37 "->"
  SPACE@37..38 " "
  FUNC_RESULT@38..61
    TUPLE_TYPE@38..61
      L_PAREN@38..39 "("
      NAMED_TYPE@39..44
        NAME@39..41
          IDENT@39..40 "b"
          SPACE@40..41 " "
        COLON@41..42 ":"
        SPACE@42..43 " "
        PATH_TYPE@43..44
          PATH@43..44
            IDENT@43..44 "B"
      COMMA@44..45 ","
      SPACE@45..46 " "
      TUPLE_TYPE@46..60
        L_PAREN@46..47 "("
        NAMED_TYPE@47..52
          NAME@47..49
            IDENT@47..48 "c"
            SPACE@48..49 " "
          COLON@49..50 ":"
          SPACE@50..51 " "
          PATH_TYPE@51..52
            PATH@51..52
              IDENT@51..52 "C"
        COMMA@52..53 ","
        SPACE@53..54 " "
        NAMED_TYPE@54..59
          NAME@54..56
            IDENT@54..55 "d"
            SPACE@55..56 " "
          COLON@56..57 ":"
          SPACE@57..58 " "
          PATH_TYPE@58..59
            PATH@58..59
              IDENT@58..59 "D"
        R_PAREN@59..60 ")"
      R_PAREN@60..61 ")"
