crates/mokoto/tests/snapshots/types__parse_types@Func.mo-4.snap
---
source: crates/mokoto/tests/types.rs
expression: output
input_file: crates/mokoto/tests/passing/types/Func.mo
---
A -> C -> B

---
Root@0..11
  FuncT@0..11
    PathT@0..2
      Path@0..2
        Ident@0..1 "A"
        Space@1..2 " "
    Arrow@2..4 "->"
    Space@4..5 " "
    FuncT@5..11
      PathT@5..7
        Path@5..7
          Ident@5..6 "C"
          Space@6..7 " "
      Arrow@7..9 "->"
      Space@9..10 " "
      PathT@10..11
        Path@10..11
          Ident@10..11 "B"
