crates/mokoto/tests/snapshots/types__parse_types@Func.mo-7.snap
---
source: crates/mokoto/tests/types.rs
expression: output
---
shared A -> B

---
FUNC_TYPE@0..13
  FUNC_ARG@0..9
    FUNC_SORT@0..7
      SHARED_KW@0..6 "shared"
      SPACE@6..7 " "
    PATH_TYPE@7..9
      PATH@7..9
        IDENT@7..8 "A"
        SPACE@8..9 " "
  ARROW@9..11 "->"
  SPACE@11..12 " "
  FUNC_RESULT@12..13
    PATH_TYPE@12..13
      PATH@12..13
        IDENT@12..13 "B"
