crates/mokoto/tests/snapshots/types__parse_types@Func.mo.snap
---
source: crates/mokoto/tests/types.rs
expression: output
input_file: crates/mokoto/tests/passing/types/Func.mo
---
A -> B

---
FuncT@0..6
  FuncArg@0..2
    PathT@0..2
      Path@0..2
        Ident@0..1 "A"
        Space@1..2 " "
  Arrow@2..4 "->"
  Space@4..5 " "
  FuncResult@5..6
    PathT@5..6
      Path@5..6
        Ident@5..6 "B"
