crates/mokoto/tests/snapshots/types__parse_types@Path.mo-2.snap
---
source: crates/mokoto/tests/types.rs
expression: output
---
Path.to.type

---
PathT@0..12
  Path@0..12
    Ident@0..4 "Path"
    Dot@4..5 "."
    Ident@5..7 "to"
    Dot@7..8 "."
    Ident@8..12 "type"
