crates/mokoto/tests/snapshots/types__parse_types@Path.mo.snap
---
source: crates/mokoto/tests/types.rs
expression: output
input_file: crates/mokoto/tests/passing/types/Path.mo
---
Text

---
Root@0..4
  PathT@0..4
    Path@0..4
      Ident@0..4 "Text"
