crates/mokoto/tests/snapshots/types__parse_types@Pre.mo-2.snap
---
source: crates/mokoto/tests/types.rs
expression: output
---
object { x : Text }

---
ObjT@0..19
  ObjSort@0..7
    ObjectKw@0..6 "object"
    Space@6..7 " "
  LBrace@7..8 "{"
  Space@8..9 " "
  TypField@9..18
    Ident@9..10 "x"
    Space@10..11 " "
    Colon@11..12 ":"
    Space@12..13 " "
    PathT@13..18
      Path@13..18
        Ident@13..17 "Text"
        Space@17..18 " "
  RBrace@18..19 "}"
